[package]
name = "zeronet"
version = "0.1.0"
authors = ["canewsin <canews.in@gmail.com>"]
edition = "2021"

[features]
default = ["userio"]
userio = []

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.52"
base64 = "0.13.0"
bincode = "1.3.3"
bitcoin = "0.27.1"
chrono = "0.4.19"
clap = "3.1.6"
futures = "0.3.21"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
num-bigint = "0.4.3"
rand = "0.8.5"
regex = "1.5.5"
rmp-serde = "1.0.0"
rmp = "0.8.10"
rusqlite = {version = "0.27.0", features = ["serde_json", "bundled"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.79"
sha1 = "0.10.1"
sha2 = "0.10.2"
tokio = { version = "1.17.0", features = ["full"] }

zeronet_cryptography = { path = "./zeronet_cryptography" }
zeronet_protocol = { path = "./zeronet_protocol", features = ["tor", "i2p"] }
zerucontent = { path = "./zerucontent"}
