[package]
authors = ["canewsin <canews.in@gmail.com>"]
edition = "2021"
name = "zeronet"
version = "0.2.0"

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.52"
base64 = "0.21.0"
bincode = "1.3.3"
bitcoin = "0.29.2"
clap = "4.0.19"
diff = "0.1.12"
futures = "0.3.21"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
num-bigint = "0.4.3"
rand = "0.8.5"
regex = "1.5.5"
rmp = "0.8.10"
rmp-serde = "1.0.0"
serde_bytes = "0.11.5"
serde_json = "1.0.79"
sha1 = "0.10.1"
sha2 = "0.10.2"
time = "0.3.9"
tor-stream = "*"
pretty_env_logger = "*"
ping = "0.4.0"
actix = "0.13"
actix-web = "4.1.0"
uuid =  { version = ">= 0.8", features = ["serde", "v4"] }
actix-files = "0.6.2"
futures-util = "0.3.21"
html-escape = "0.2.11"
actix-web-actors = "4.1.0"
rayon = "1.5.3"
mut_static = "5.0.0"
mime = "0.3.16"
mime_guess = "2.0.4"
hex = "0.4.3"

[dependencies.rusqlite]
features = ["serde_json", "bundled"]
version = "0.28.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"

[dependencies.tokio]
features = ["full"]
version = "1.17.0"

[dependencies.zeronet_cryptography]
git = "https://github.com/decentnetwork/zeronet_cryptography.git"

[dependencies.zeronet_protocol]
git = "https://github.com/decentnetwork/zeronet_protocol.git"
branch = "decentnet"

[dependencies.zerucontent]
git = "https://github.com/decentnetwork/zerucontent.git"

[dependencies.decentnet_protocol]
git = "https://github.com/decentnetwork/decentnet_protocol.git"
features = ["full"]

[dependencies.wit-bindgen-wasmer]
git = "https://github.com/wasmerio/wit-bindgen.git"
branch="wasmer"

[features]
default = ["userio", "blockstorage"]
blockstorage = []
userio = []

[profile.beta]
inherits = "release"
opt-level = "s"
strip = true
lto = true

[profile.stable]
inherits = "release"
opt-level = "z"
strip = true
lto = true
panic = "abort"
